conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur() { gauche();
   ^Conditions:6: error: illegal start of simple expression
	}
        ^