conditions.Conditions.scala.code
if estFaceMur() { gauche();
                gauche();
                avance();}
else { avance()}